<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_12sdp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:fontFamily="@font/poppins_medium"
            tools:text="haloo"
            android:textSize="@dimen/_14ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_batal"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/poppins_medium"
            app:strokeColor="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10ssp"
            android:layout_marginEnd="@dimen/_5sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_simpan"
            android:text="@string/simpan"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>