<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/AppBarOverlay"
            app:navigationIcon="@drawable/ic_baseline_keyboard_arrow_left_24"
            app:titleTextColor="@color/black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    tools:src="@tools:sample/backgrounds/scenic[4]" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_8sdp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_add_image"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/add_logo"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_10ssp"
                        app:cornerRadius="@dimen/_8sdp"
                        app:icon="@drawable/ic_baseline_image_24"
                        app:iconGravity="textStart"
                        app:iconPadding="@dimen/_8sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_add_text"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/add_text"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_10ssp"
                        app:backgroundTint="@color/colorPrimaryDark"
                        app:cornerRadius="@dimen/_8sdp"
                        app:icon="@drawable/ic_baseline_text_fields_24"
                        app:iconGravity="textStart"
                        app:iconPadding="@dimen/_8sdp" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_share"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_medium"
                    app:strokeColor="@color/colorPrimary"
                    android:text="@string/share"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp"
                    app:cornerRadius="@dimen/_8sdp"
                    app:icon="@drawable/ic_baseline_share_24"
                    app:iconPadding="@dimen/_8sdp"
                    app:iconGravity="textStart"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_simpan"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/simpan"
                    android:textSize="@dimen/_12ssp"
                    app:cornerRadius="@dimen/_8sdp"
                    app:icon="@drawable/ic_baseline_save_24"
                    app:iconPadding="@dimen/_8sdp"
                    app:iconGravity="textStart"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>